# scratch-tech-explorations

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build-for-web.sh  build.rs  index-dev.html  index.html  package-lock.json  package.json  pnpm-lock.yaml
assets/: Infinite ToeBeans.sb2  Infinite Toebeans.sb3
src/: App.tsx  loading_screen.rs  main.rs  project.rs  project_bundle.rs  sb3.rs  sprite.rs  stage.rs  zip_asset_plugin.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/assets/: json_asset_plugin.rs  mod.rs  scratch_project_plugin.rs  zip_asset_plugin.rs
src/sb2/: load.rs  mod.rs
src/sb4/: from_sb2.rs  mod.rs
src/virtual_machine/: from_sb2.rs  load.rs  mod.rs  runtime.rs  spawn.rs
