[package]
name = "scratch-bevy"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
futures-lite = "1.12.0"
serde = {version = "1.0.152", features = ["std", "derive"]}
serde_json = {version = "1.0.85", features = ["std", "float_roundtrip"]}
zip = "0.6.3"

[features]
# remember to disable bevy's "dynamic_linking" feature for release builds
default = ["dynamic_linking"]
dynamic_linking = ["bevy/dynamic_linking"]

# Enable minor optimization in dev builds
[profile.dev]
opt-level = 1

# Enable more optimizations for dependencies, even in dev builds
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[profile.web-dev]
inherits = "dev"

[profile.web-release]
inherits = "release"
opt-level = 's'
